# diffdrive-simulator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: path_following.py
src/diffdrive/: __init__.py  cli.py  controllers.py  kinematics.py  plotting.py  simulator.py  trajectories.py
tests/: test_kinematics.py  test_simulator.py
