[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffdrive-sim"
version = "0.1.0"
description = "A from-scratch Differential Drive robot simulator with pure-pursuit path following."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name="Your Name"}]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5.0",
    "black>=24.0",
    "pre-commit>=3.7",
]

[project.scripts]
diffdrive-sim = "diffdrive.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E402"]